--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
@@ -203,7 +203,7 @@
                 <td>
                     <span ng-show="t.Archive != true" ng-click="vm.delete(t.Id)" style="color: lightgrey; cursor: pointer; font-size: 14pt" class="glyphicon glyphicon-remove-circle"></span>
                     <span ng-show="t.Archive != true" ng-click="vm.edit(t.Id)" title="@Resource.Title_EditRequest..." style="color: lightgrey; cursor: pointer" class="glyphicon glyphicon-pencil"></span>
-                    
+                    <span ng-show="t.Archive == true" style="color:green; font-size: 18pt">A</span>
                 </td> 
             </tr>
             <tr>
