--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
@@ -199,7 +199,11 @@
                 </td>
                 <td><span>{{t.WorkerName}}</span></td>
                 <td><span>{{t.DateInsert | date:'dd.MM.yyyy HH:mm'}}</span></td>
-                <td><span style="color:{{vm.getDeadlineColor(t)}}">{{t.DateEndPlan | date:'dd.MM.yyyy HH:mm'}}</span></td>
+                <td>
+                    <div style="color:{{vm.getDeadlineColor(t)}}">{{t.DateEndPlan | date:'dd.MM.yyyy HH:mm'}}</div>
+                    <div style="color: gray">{{t.DateEndFact | date:'dd.MM.yyyy HH:mm'}}</div>
+                    <div ng-show="t.CountCorrectionDateEndPlan > 0">@Resource.Text_CountCorrectionDateEndPlan: {{t.CountCorrectionDateEndPlan}}</div>
+                </td>
                 <td>
                     <span ng-show="t.Archive != true" ng-click="vm.delete(t.Id)" style="color: lightgrey; cursor: pointer; font-size: 14pt" class="glyphicon glyphicon-remove-circle"></span>
                     <span ng-show="t.Archive != true" ng-click="vm.edit(t.Id)" title="@Resource.Title_EditRequest..." style="color: lightgrey; cursor: pointer" class="glyphicon glyphicon-pencil"></span>
