--- a/Presentation/HelpDesk.CabinetWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/Presentation/HelpDesk.CabinetWebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using HelpDesk.CabinetWebApp.Controllers
-@using HelpDesk.DTO
+@using HelpDesk.DataService.DTO
 @using HelpDesk.CabinetWebApp.Resources
 
 @if (Request.IsAuthenticated)
