--- a/Presentation/HelpDesk.WorkerWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using HelpDesk.WorkerWebApp.Controllers
-@using HelpDesk.DTO
+@using HelpDesk.DataService.DTO
 @using HelpDesk.WorkerWebApp.Resources
 
 @if (Request.IsAuthenticated)
