--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/requestHistory/list.cshtml
@@ -212,7 +212,7 @@
                 </td> 
             </tr>
             <tr>
-                <td style="text-align:center" colspan="5">
+                <td style="text-align: right; border-top: none" colspan="5">
                     <span style="margin-right:10px; margin-left:10px; padding:3px; text-align: center; border: 1px dashed {{s.BackColor}}" ng-repeat="s in t.AllowableStates">
                         <a ng-click="vm.openNewRequestEventForm(t.Id, s.Id, s.Name)" href="" style="text-decoration:underline">{{s.ActionName}}</a>
                     </span>
