--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/employee/employee.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/employee/employee.cshtml
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="close({ cancel: true }, 300)" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">@Resource.Label_Employee</h4>
+                <h4 class="modal-title">@Resource.Label_Employee [<span ng-show="vm.employee.Id == 0">@Resource.Text_NewRecord</span><span ng-show="vm.employee.Id > 0">@Resource.Text_EditRecord</span>]</h4>
             </div>
             <div class="modal-body">
 
