--- a/Presentation/HelpDesk.WorkerWebApp/App/Main/views/request/addTO.cshtml
+++ b/Presentation/HelpDesk.WorkerWebApp/App/Main/views/request/addTO.cshtml
@@ -16,7 +16,7 @@
                     <div class="form-group">
                         <label for="post">@Resource.Label_ObjectType:</label>
                         
-                        <select class="form-control" style="width: 100%" required ng-model="vm.requestObjectTO.ObjectTypeId"
+                        <select class="form-control" style="width: 100%" ng-model="vm.requestObjectTO.ObjectTypeId"
                                 ng-options="option.Id as option.Name for option in vm.objectTypes"></select>
 
                         <ul>
